# yanet2

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .protolint.yaml  AUTHORS  CLAUDE.md  Cargo.toml  Justfile  Makefile  README.md  acl+fwstate.yaml  acl.yaml  balancer.yaml  bootstrap.yaml  buf.yaml  controlplane.yaml  dataplane.yaml  forward.yaml  go.mod  go.sum  meson.build  meson.options  meson_options.txt  update-changelog.sh  yanet2-controlplane.service  yanet2-dataplane.service
agent/bootstrap/: main.go  meson.build
agent/controlplane/: main.go  meson.build
agent/counters/: main.go  meson.build
agents/bird-adapter/: meson.build  service.go
agents/bird-adapter/adapterpb/: bird_import.proto  to_config.go
cli/core/: Cargo.toml
cli/core/src/: client.rs  dispatcher.rs  display.rs  errors.rs  instance.rs  lib.rs  logging.rs  main.rs  numa.rs  output.rs
common/commonpb/: ipaddr.go  ipaddr.proto  ipaddr_test.go  iprange.go  iprange.proto  iprange_test.go  macaddr.go  macaddr.proto  macaddr_test.go  meson.build  metric.proto  metrics.go  metrics_test.go  options.proto  target.proto  validate_target.go
common/filterpb/: convert.go  filter.go  filter.proto  meson.build
common/readinesspb/: meson.build  readiness.proto
controlplane/: Makefile  go.mod  go.sum  main.c  meson.build
controlplane/builtin/: counters.go  function.go  inspect.go  logging.go  pipeline.go
controlplane/bundle/: bundle.go  cfg.go
controlplane/cmd/bird-adapter/: README.md  client.go  main.go  server.go
controlplane/cmd/yncp-director/: main.go
controlplane/etc/yanet/: controlplane-default.yaml  controlplane-director.yaml
controlplane/ffi/: agent.go  pipeline.go  shm.go  worker.go
controlplane/gateway/: auth_service.go  cfg.go  credentials.go  gateway.go  registrar.go  registration_loop.go  registry.go  runner.go  runner_test.go  service.go  tls.go
controlplane/httpproxy/: proxy.go
controlplane/internal/auth/: cfg.go  context.go  interceptor.go  interceptor_test.go  manager.go  manager_test.go
controlplane/internal/bitset/: bitset.go
controlplane/internal/ffi/: agent.go  dp_config.go  pipeline.go  shm.go
controlplane/internal/gateway/: cfg.go  counters_service.go  function_service.go  gateway.go  inspect_service.go  logging_service.go  pipeline_service.go  proxy.go  registry.go  runner.go  service.go  tls.go
controlplane/internal/version/: version.go
controlplane/internal/xgrpc/: interceptor.go  interceptor_test.go  method.go
controlplane/modules/decap/: cfg.go  ffi.go  mod.go  service.go
controlplane/modules/forward/: cfg.go  ffi.go  mod.go  service.go  service_test.go
controlplane/modules/nat64/: cfg.go  ffi.go  mod.go  service.go
controlplane/modules/route/: cfg.go  ffi.go  mod.go  neighbour_service.go  service.go
controlplane/pkg/yncp/: cfg.go  director.go
controlplane/yncp/: cfg.go  director.go  logging.go  version.go
controlplane/yncp/gateway/: gateway.go
controlplane/ynpb/: auth.proto  counters.proto  device.proto  function.proto  gateway.pb.go  gateway.proto  gateway_grpc.pb.go  inspect.proto  logging.pb.go  logging.proto  logging_grpc.pb.go  meson.build  module.proto  pipeline.proto
coordinator/: cfg.go  coordinator.go  meson.build
coordinator/cmd/coordinator/: main.go
coordinator/coordinatorpb/: meson.build  module.proto  registry.proto
dataplane/: config.c  config.h  dataplane.c  dataplane.h  device.c  device.h  dpdk.c  dpdk.h  main.c  meson.build  module.c  module.h  pipeline.c  pipeline.h  worker.c  worker.h
dataplane/drivers/: sock_dev.c  sock_dev.h
dataplane/modules/: acl.c  acl.h  balancer.c  balancer.h  decap.h  kernel.c  kernel.h  meson.build  route.c  route.h
dataplane/packet/: encap.c  encap.h  packet.c  packet.h
dataplane/unittest/: main.c  meson.build
devices/cli/: Cargo.toml
filter/: README.md  attribute.h  classify.c  classify.h  compiler.h  filter.c  filter.h  filter_test.c  helper.c  helper.h  ipfw.c  ipfw.h  lpm.h  meson.build  net6_collector.h  query.h  radix.h  registry.h  rule.h
filter/attribute/: device.h  net4.h  net6.h  port.h  proto.h  proto_range.h  util.h  vlan.h
filter/bench/: func_vs_macros.c  macros.c  meson.build  prev_vs_func.c  prev_vs_macros.c
filter/classifiers/: net4_fast.h  net6.h  net6_fast.h  proto.h  proto_range.h  segments.h
filter/compiler/: attribute.h  declare.h  device.c  helper.c  helper.h  net4.c  net4_fast.c  net6.c  net6_fast.c  port.c  port_fast.c  proto.c  proto_range.c  proto_range_fast.c  segments.c  segments.h  vlan.c
filter/query/: attribute.h  declare.h  device.h  net4.h  net4_fast.h  net6.h  net6_fast.h  port.h  port_fast.h  proto.h  proto_range.h  proto_range_fast.h  segments.h  vlan.h
filter/tests/: basic_net4.c  basic_net4_fast.c  basic_net6.c  basic_net6_fast.c  basic_port_fast.c  basic_ports.c  basic_proto.c  basic_proto_range.c  basic_proto_range_fast.c  basic_vlan.c  bench_net4.c  bench_net4_fast.c  bench_net6.c  bench_net6_fast.c  category.c  combo_net4_port_proto_dst.c  combo_net4_port_src.c  combo_net6_port_src.c  corner.c  helpers.h  macros.c  memory.c  meson.build  net4_ports.c  non_term.c  vs_prev.c
filter/utils/: meson.build  utils.c  utils.h
lib/counters/: counters.c  counters.h  histogram.c  histogram.h  meson.build  tests.c  utils.h
lib/dataplane_ut/: dataplane_ut.c  dataplane_ut.h  mempool.h  meson.build
lib/errors/: errors.c  errors.h  meson.build
lib/fwstate/: config.h  fwmap.h  fwstate_cursor.h  layermap.h  lookup.c  lookup.h  meson.build  ops.h  sync.c  sync.h  types.h
lib/utils/: mbuf.h  meson.build  packet.c  packet.h  test.c
mock/: aggregator.c  config.h  meson.build  mock.c  mock.h  packet.h  time.c  worker.c  worker.h  worker_mempool.h
mock/go/: config.go  meson.build  mock.go  mock_test.go
mock/tests/: basic_test.c  meson.build
web/: .rustfmt.toml  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  MainMenu.scss  MainMenu.tsx  components.rs  lib.rs  main.rs  main.tsx  settings.rs  theme.rs  types.ts  xxx.rs
(+2392 files in other folders)
