[workspace]

resolver = "2"

members = [
    "cli/core",
    "cli/modules/common",
    "cli/modules/inspect",
    "cli/modules/pipeline",
    "cli/modules/function",
    "cli/modules/counters",
    "modules/decap/cli",
    "modules/dscp/cli",
    "modules/forward/cli",
    "modules/nat64/cli",
    "modules/pdump/cli",
    "modules/balancer/cli",
    "modules/acl/cli",
    "modules/route/cli/neighbour",
    "modules/route/cli/route",
    "devices/cli",
    "devices/plain/cli",
    "devices/vlan/cli",
]

[profile.release]
panic = "abort"
