[workspace]

resolver = "2"

members = [
    "common/rust/commonpb",
    "common/rust/filterpb",
    "common/rust/ynpb",
    "cli/core",
    "cli/modules/common",
    "cli/modules/inspect",
    "cli/modules/pipeline",
    "cli/modules/function",
    "cli/modules/counters",
    "modules/acl/cli",
    "modules/fwstate/cli",
    "modules/decap/cli",
    "modules/dscp/cli",
    "modules/forward/cli",
    "modules/nat64/cli",
    "modules/pdump/cli",
    "modules/balancer/cli",
    "modules/balancer2/cli",
    "modules/route/cli/route",
    "modules/route-mpls/cli",
    "devices/plain/cli",
    "devices/vlan/cli",
    "operators/pipeline/cli",
    "operators/route/cli/route",
    "operators/route/cli/neighbour",
]

[profile.release]
panic = "abort"
