[package]
name = "yanetweb"
version = "0.1.0"
edition = "2021"
authors = ["Evgeny Safronov <esafronov@yandex-team.ru>"]
rust-version = "1.84"
license = "MIT"
keywords = ["network", "traffic-generator"]
publish = false

[dependencies]
netip = { version = "0.1", path = "../common/rust/netip" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
web-sys = { version = "0.3.60", features = ["Storage"] }
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_log = "1"

# gRPC/Protobuf dependencies
prost = "0.13"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.5"

# TDB.
log = "0.4"
wasm-logger = "0.2"
leptos-use = { version = "0.15.6", features = ["use_element_bounding"] }
leptos-struct-table = "0.14.0-beta2"
wasmtimer = "0.4"

[build-dependencies]
prost-build = "0.13"

[package.metadata.leptos]
lib-profile-release = "wasm-release"