[package]
name = "yanet-cli"
version = "0.1.0"
edition = "2021"
publish = false

rust-version = "1.84"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
log = "0.4"
simple_logger = { version = "5", features = ["timestamps", "stderr"] }
colored = "3"
