[package]
name = "yanet-cli"
version = "0.1.0"
edition = "2021"
publish = false

rust-version = "1.84"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
log = "0.4"
simple_logger = { version = "5", features = ["timestamps", "stderr"] }
colored = "3"
tabled = { version = "0.18", features = ["ansi"] }
tokio = { version = "1", features = ["net", "io-util", "time", "sync"] }
tonic = "0.13"
tower = "0.5"
http = "1"
ssh-key = "0.6"
byteorder = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
